# AlertANSSI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: data_analysis_en.ipynb  data_analysis_fr.ipynb
src/anssi_monitor/config/: config.py
src/anssi_monitor/locales/: en.json  fr.json  locale.py
src/anssi_monitor/utils/: loader.py  mail.py  pdf_generator.py
